--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.6.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "react-select": "^5.6.0",
     "styled-components": "^5.3.6",
+    "typescript": "^4.9.4",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
